Compatible for SpringWebFlux