@@ -6,8 +6,9 @@ import dev.sobue.slide.entity.MarkdownDocument;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileReader;
+import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -15,6 +16,8 @@ import org.springframework.stereotype.Service;
 @Service
 @RequiredArgsConstructor
 public class MarkdownSlideServiceImpl implements MarkdownSlideService {
+
+  private static final String LINE_SEPARATOR = System.getProperty("line.separator");
 
   private final Markdown2HtmlConverter converter;
 
@@ -24,13 +27,14 @@ public class MarkdownSlideServiceImpl implements MarkdownSlideService {
   public List<MarkdownDocument> get(File file) {
     StringBuilder builder = new StringBuilder();
     try (BufferedReader reader = new BufferedReader(new FileReader(file))) {
-      String string = reader.readLine();
-      while (string != null) {
-        builder.append(string).append(System.getProperty("line.separator"));
-        string = reader.readLine();
+      String string;
+      while ((string = reader.readLine()) != null) {
+        builder
+            .append(string)
+            .append(LINE_SEPARATOR);
       }
-    } catch (Exception e) {
-      throw new IllegalStateException(e);
+    } catch (IOException ioException) {
+      throw new UncheckedIOException(ioException);
     }
 
     String content = builder.toString();
@@ -40,7 +44,7 @@ public class MarkdownSlideServiceImpl implements MarkdownSlideService {
 
   @Override
   public List<MarkdownDocument> get(String key, String content) {
-    List<String> chapters = Arrays.asList(content.split("\n# "));
+    List<String> chapters = List.of(content.split("\n# "));
     List<MarkdownDocument> documents = new ArrayList<>();
 
     for (int i = 0; i < chapters.size(); i++) {
